# libstr

./: .gitignore  CMakeLists.txt  README.md
include/: libstr.h
src/: libstr.c
